<resources>
    <string name="app_name">SocialWall</string>
    <string name="tab_home">Menú</string>
    <string name="tab_user">Cuenta</string>
    <string name="tab_news">Noticias</string>
    <string name="tab_twitch">Twitch</string>
    <string name="TwitchCompanion">Twitch Companion</string>
    <string name="Sign_up">Registrarse</string>
    <string name="goto_login"><u>Ya tienes una cuenta? Haz Login</u></string>
    <string name="Log_in">Iniciar Sesión</string>
    <string name="Log_out">Desconectarse</string>
    <string name="Send_Message">Enviar</string>
    <string name="guess">Invitado</string>
    <string name="Email">Email: </string>
    <string name="Add_Email">Escribe un email... </string>
    <string name="Password">Password: </string>
    <string name="Add_Password">Escribe un password...</string>
    <string name="Put_Password">Escribe tu password...</string>
    <string name="Username">Username: </string>
    <string name="Add_Username">Escoge tu usuario...</string>
    <string name="ad_attribution">Ad</string>
    <string name="admob_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="descripci_n">Descripción:</string>
    <string name="nombre_usuario">Nombre Usuario:</string>
    <string name="email">Email:</string>
    <string name="StreamInfo">Busca info de Streamers, ex: Ninja</string>

</resources>
