<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        tools:context=".activity.SignUpActivity">

    <!--username-->
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:text="@string/Username"/>

    <EditText android:id="@+id/usernameInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="1"
              android:gravity="center"
              android:hint="@string/Add_Username"/>

    <!--email-->
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin"
              android:textStyle="bold"
              android:text="@string/Email"/>

    <EditText android:id="@+id/emailInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="1"
              android:inputType="textEmailAddress"
              android:gravity="center"
              android:hint="@string/Add_Email"/>

    <!--password-->
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin"
              android:textStyle="bold"
              android:text="@string/Password"/>

    <EditText android:id="@+id/passordInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="1"
              android:inputType="textPassword"
              android:gravity="center"
              android:hint="@string/Add_Password"/>

    <!--Submit-->
    <Button android:id="@+id/submitButton"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"/>

    <!-- Go to Login <> SignUp -->
    <TextView android:id="@+id/goToLogin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin"
              android:text="@string/goto_login"/>

    <!-- Show progress -->
    <ProgressBar android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
                 android:visibility="invisible"
                 android:layout_marginTop="@dimen/margin"
    />

</LinearLayout>